WP: 2 Points Left

--- a/wp/wp-content/plugins/woocommerce/i18n/languages/woocommerce-ru_RU.po
+++ b/wp/wp-content/plugins/woocommerce/i18n/languages/woocommerce-ru_RU.po
@@ -5363,7 +5363,7 @@ msgstr "Имя новой категории товаров"
 #: includes/updates/woocommerce-update-2.0.php:44
 msgctxt "slug"
 msgid "product-category"
-msgstr "товарная-категория"
+msgstr "product-category"
 
 #: includes/class-wc-post-types.php:90 includes/class-wc-post-types.php:92
 #: includes/widgets/class-wc-widget-product-tag-cloud.php:27
